--- a/index.html
+++ b/index.html
@@ -180,19 +180,19 @@
   </div>
 </template>
 <script>
-var fireballSize  = 22;
-var getFireballSpeed = function(isMovingLeft){
+const fireballSize  = 22;
+const getFireballSpeed = function(isMovingLeft){
  return isMovingLeft ? 2 : 5;
 }
-var wizardSpeed = 3;
-var wizardWidth = 70;
-var getWizardHeight = function (){
+const wizardSpeed = 3;
+const wizardWidth = 70;
+const getWizardHeight = function (){
   return 1.337 * wizardWidth;
   }
-var getWizardX = function(fieldWidth){
+const getWizardX = function(fieldWidth){
   return (fieldWidth-wizardWidth) / 2;
 }
-var getWizardY = function(fieldHeight){
+const getWizardY = function(fieldHeight){
   return fieldHeight / 3;
 }
 </script>
